# yoruba-g2p

./: .gitignore  CONTRIBUTING.md  README.md  demo_yoruba_g2p.ipynb  pyproject.toml
.github/workflows/: build.yml  lint.yml  publish.yml  tests.yml
tests/: conftest.py
yoruba_g2p/: cli.py  core.py
